--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ jupyter==1.0.0
 llvmlite==0.36.0
 locket==0.2.1
 MarkupSafe==1.1.1
+matplotlib==3.4.1
 mccabe==0.6.1
 mistune==0.8.4
 mpmath==1.2.1
 multipledispatch==0.6.0
 mypy-extensions==0.4.3
+numpy==1.20.2
 olefile==0.46
 parso==0.7.0
 partd==1.1.0
